<resources>
    <string name="app_name">Cafe Or</string>
    <string name="logo_description"> Логотип кофе</string>
    <string name="welcome">Добро пожаловать</string>
    <string name="hint_name">Введите Ваше имя:</string>
    <string name="hint_password">Введите Ваш пароль:</string>
    <string name="button_create_order">Создать заказ</string>
    <string name="toolbar">Hi,I love coffee</string>
    <string name="warning_fill_fields">Все поля должны быть заполнены </string>
    <string name="spinner_text_hint">Выберите из списка</string>
    <string name="hello_user">Привет, %s! Что будете заказывать?</string>
    <string name="tea">"Чай "</string>
    <string name="coffe">"Кофе "</string>
    <string name="additions">Что добавить в Ваш %s?</string>
    <string name="milk">Молоко</string>
    <string name="sugar">Сахар</string>
    <string name="lemon">Лимон</string>
    <string name="ChooseDrink">Выберите вид напитка</string>
    <string name="button_send_description">"Кнопка отправить заказ   "</string>

    <string name="default_name">человек</string>
    <string name="default_password">пароль</string>
    <string name="order">Имя: %s\n Пароль: %s\n Напиток: %s\n Вид напитка: %s\n</string>
    <string name="need_additions">"Выбранные добавки: "</string>


    <string-array name="options_of_coffe">
        <item>Американо</item>
        <item>Капучино</item>
        <item>Латте</item>
    </string-array>

    <string-array name="options_of_tea">
        <item>Черный</item>
        <item>Красный</item>
        <item>Зеленый</item>
        <item>Белый</item>
    </string-array>

</resources>