<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/lightbrown"
    android:orientation="vertical"
    >

    <androidx.appcompat.widget.Toolbar
        android:id="@+id/toolbar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/buttincolor"/>
    <!--        android:titleTextColor="@color/white" -  почему-то не хочет признавать -->
    <!--        android:titleTextColor="#ff0000" -  почему-то не хочет признавать -->
    <!--        android:text="@string/toolbar" -  почему-то не хочет признавать -->
    <!--        android:textColor="@color/white" -  почему-то не хочет признавать -->

    <ImageView
        android:id="@+id/imageViewLogo"
        android:layout_width="match_parent"
        android:layout_weight="1"
        android:layout_height="0dp"
        android:contentDescription="@string/logo_description"
        android:src="@drawable/cof" />

    <TextView
        android:id="@+id/textViewWelcome"
        android:textSize="38sp"
        android:gravity="center"
        android:layout_marginBottom="16dp"
        android:layout_marginTop="16dp"
        android:textStyle="bold"
        android:textColor="@color/white"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/welcome" />

    <EditText
        android:id="@+id/editTextTextName"
        android:layout_width="match_parent"
        android:layout_height="49dp"
        android:textColor="@color/white"
        android:layout_margin="8dp"
        android:inputType="text"
        android:hint="@string/hint_name"
        android:textColorHint="@color/white"
        android:textStyle="bold"/>

    <EditText
        android:id="@+id/editTextPassword"
        android:layout_width="match_parent"
        android:layout_height="49dp"
        android:textColor="@color/white"
        android:layout_margin="8dp"
        android:inputType="textPassword"
        android:hint="@string/hint_password"
        android:textColorHint="@color/white"
        android:textStyle="bold"/>

    <Button
        android:id="@+id/buttonCreateOrder"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textSize="24sp"
        android:layout_margin="8dp"

        android:background="@color/buttincolor"
        android:textColor="@color/white"
        android:text="@string/button_create_order"

        android:onClick="onClickCreateOrder"/>
</LinearLayout>
