<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/lightbrown"

    tools:context=".CreateOrderActivity">

    <TextView
        android:id="@+id/textViewHello"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:text="@string/hello_user"
        android:layout_marginTop="36dp"
        android:layout_marginBottom="8dp"
        android:textSize="24sp"
        android:textStyle="bold"
        android:gravity="center"
        android:textColor="@color/darkbrown"
        />

    <RadioGroup
        android:id="@+id/radioGroup"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintTop_toBottomOf="@+id/textViewHello"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_margin="8dp"
        android:textColor="@color/white"
        >

        <RadioButton
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/tea"
            tools:ignore="MissingConstraints"
            android:layout_margin="8dp"
            android:textColor="@color/white"/>
        <RadioButton
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/coffe"
            tools:ignore="MissingConstraints"
            android:layout_margin="8dp"
            android:textColor="@color/white"/>
    </RadioGroup>

    <TextView
        android:id="@+id/textViewAdditions"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@+id/radioGroup"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:text="@string/additions"
        android:layout_margin="8dp"
        android:textSize="24sp"
        android:textStyle="bold"
        android:gravity="center"
        android:textColor="@color/darkbrown"
        />

        <CheckBox
            android:id="@+id/checkboxMilk"
            android:text="@string/milk"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toBottomOf="@+id/textViewAdditions"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toStartOf="@+id/checkboxSugar"
            android:layout_margin="8dp"
            android:textColor="@color/white"

            tools:ignore="MissingConstraints" />

        <CheckBox
            android:id="@+id/checkboxSugar"
            android:text="@string/sugar"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toBottomOf="@+id/textViewAdditions"
            app:layout_constraintStart_toEndOf="@+id/checkboxMilk"
            app:layout_constraintEnd_toStartOf="@+id/checkboxLemon"
            android:layout_margin="8dp"
            android:textColor="@color/white"

            tools:ignore="MissingConstraints" />

        <CheckBox
            android:id="@+id/checkboxLemon"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/lemon"
            app:layout_constraintTop_toBottomOf="@+id/textViewAdditions"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@+id/checkboxSugar"
            android:layout_margin="8dp"
            android:textColor="@color/white"

            tools:ignore="MissingConstraints" />

    <TextView
        android:id="@+id/textViewChooseDrink"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@+id/checkboxSugar"

        android:text="@string/ChooseDrink"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_margin="8dp"
        android:textSize="24sp"
        android:textStyle="bold"
        android:gravity="center"
        android:textColor="@color/darkbrown"
        />

    <Spinner
        android:id="@+id/spinnerTea"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:entries="@array/options_of_tea"
        android:textColor="@color/white"

        app:layout_constraintTop_toBottomOf="@+id/textViewChooseDrink"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"

        android:visibility="visible"
        android:layout_margin="8dp"




        tools:ignore="MissingConstraints" />

    <Spinner
        android:id="@+id/spinnerCoffe"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:entries="@array/options_of_coffe"
        android:textColor="@color/white"

        app:layout_constraintTop_toBottomOf="@+id/textViewChooseDrink"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"

        android:visibility="invisible"
        android:layout_margin="8dp"


        tools:ignore="MissingConstraints" />

        <ImageView
            android:id="@+id/buttonSendOrder"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:src="@drawable/button"
            android:contentDescription="@string/button_send_description"
            app:layout_constraintTop_toBottomOf="@id/spinnerCoffe"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"
            android:layout_margin="8dp"

            tools:ignore="MissingConstraints" />


</androidx.constraintlayout.widget.ConstraintLayout>